--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,5 +1,10 @@
 name: Staging deployment
 
+env:
+  DOCKER_IMAGE_NAME: amalabey-azure-ttt
+  IMAGE_REGISTRY_URL: docker.pkg.github.com
+  AZURE_WEBAPP_NAME: amalabey-ttt-app
+
 on: 
   pull_request:
     types: [labeled]
@@ -7,3 +12,5 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: contains(github.event.pull_request.labels.*.name, 'stage')
+    
