--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -6,8 +6,8 @@ on:
 
 env:
   PACKAGES_TOKEN: ${{secrets.PACKAGES_TOKEN}}
-  AZURE_RESOURCE_GROUP: cd-with-actions
-  AZURE_APP_PLAN: actions-ttt-deployment
+  AZURE_RESOURCE_GROUP: aa-cd-with-githubactions-rg
+  AZURE_APP_PLAN: actions-ttt-deployment-asp
   AZURE_LOCATION: '"Australia Southeast"'
   #################################################
   ### USER PROVIDED VALUES ARE REQUIRED BELOW   ###
